// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tooltip rtl render component should be rendered correctly in RTL direction 1`] = `<span />`;

exports[`Tooltip should hide when mouse leave antd disabled component Button 1`] = `
<button
  class="g-btn css-var-root g-btn-default g-btn-color-default g-btn-varig-outlined"
  disabled=""
  type="button"
/>
`;

exports[`Tooltip should hide when mouse leave antd disabled component Switch 1`] = `
<button
  aria-checked="false"
  class="g-switch css-var-root g-switch-disabled"
  disabled=""
  role="switch"
  type="button"
>
  <div
    class="g-switch-handle"
  />
  <span
    class="g-switch-inner"
  >
    <span
      class="g-switch-inner-checked"
    />
    <span
      class="g-switch-inner-unchecked"
    />
  </span>
</button>
`;

exports[`Tooltip support arrow props by default 1`] = `
<div>
  <div
    aria-describedby="test-id"
    class="target g-tooltip-open"
  >
    target
  </div>
  <div
    class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-root g-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-tooltip-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-tooltip-arrow-content"
      />
    </div>
    <div
      class="g-tooltip-container"
      id="test-id"
      role="tooltip"
    />
  </div>
</div>
`;

exports[`Tooltip support arrow props pass false to hide arrow 1`] = `
<div>
  <div
    aria-describedby="test-id"
    class="target g-tooltip-open"
  >
    target
  </div>
  <div
    class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-css-var css-var-root g-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-tooltip-container"
      id="test-id"
      role="tooltip"
    />
  </div>
</div>
`;
